style/style.css
/*
	***color palette***

	rgb(51, 51, 51) 'black'
	rgb(252, 252, 252) 'white'
	rgb(153, 153, 153) light grey
*/

body {
	font-family: 'Proxima Nova', Georgia, sans-serif;
	font-size: 16px;
	color: rgb(51, 51, 51);
	background-color: rgb(252, 252, 252);
	text-align: center;
}

a {
	color: inherit;
	text-decoration: none;
}

.about__info {
	display: flex;
	margin: 0 11.5%;
	width: 77%;
}

.about__info > div {
	width: 50%;
}

.about img {
	height: 100%;
	width: 100%;
}

.about__info__copy {
	text-align: left;
	margin-right: 2em;
}

.contact p {
	color: rgb(153, 153, 153);
	font-size: 0.9em;
}

.contact p:nth-child(2) {
	margin-bottom: 2.5em;
}

.nav-bar {
	height: 10em;
	margin: 4em 0em 0.5em 0em;
	padding-bottom: 1em;
}

.nav-bar-mobile--open {
	/*margin-bottom: 1em;*/
}

.nav-bar__header {
	font-size: 3.5em;
}

.nav-bar__header:hover {
	opacity: 0.8;
}

.nav-bar__link {
	color: rgb(153, 153, 153);
	margin: 0em 0.7em;
}

.nav-bar__link:hover, .nav-bar__link--selected, .contact a:hover {
	color: rgb(51, 51, 51);
}

.player-container {
	height: 34em;
	display: inline-block;
	margin-bottom: 3em;
	width: 90%;
}

.wrapper {
	margin-bottom: 1.5em;
}

.videos-list {
    box-sizing: border-box;
	display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0 10%;
    text-align: center;
	width: 80%;
}

.videos-list__each {
	cursor: pointer;
	margin-bottom: 0.625em;
	width: 33.33%;
}

.videos-list__each__img:hover {
	opacity: 0.8;
}

.videos-list__each__title {
	display: inline-block;
	font-size: 0.75em;
	overflow-wrap: break-word;
	width: 70%;
}

/* pseudo-selectors */
.wrapper:after {
	content: "";
	display: inline-block;
	border-bottom: 0.1em solid rgba(153, 153, 153, 0.4);
	width: 77%;
}

/* media queries */
@media (max-width: 37.5em) {
	.nav-bar {
		height: 100%;
		margin-top: 1em;
	}

	.nav-bar__header {
		font-size: 3.0em;
	}

	.nav-bar__link {
		font-size: 1em;
		display: flex;
		justify-content: center;
		margin-bottom: 0.5em;
	}

	.player-container {
		height: 100%;
		/*width: 80%;*/
	}

	.wrapper:after {
		width: 100%;
	}

	.wrapper--mobile:after {
		content: "";
		display: inline-block;
		border-bottom: 0.1em solid rgba(153, 153, 153, 0.4);
		width: 100%;
	}

	.videos-list__each {
		width: 50%;
	}

	.videos-list__each__img {
		width: 90%;
	}
}

